# nuzlocke-tracker

./: .gitignore  Cargo.toml  Pipfile  README.md  config.defaults.json  config.json
data/sprites/: .gitignore
font/: readfont.py  readfont_tests.py
sprites/: .gitignore
src/: common.py  debug.py  en_data.py  en_fontmap.py  en_model.py  en_model_types.py  keyboard_input.py  lib.rs  main.py  main.rs
src/font/: __init__.py  readfont.py  readfont_index.py
