[package]
name = "nuzlocke-tracker"
version = "0.1.0"
edition = "2021"

[dependencies]
# this and the idbg feature are only used for testing reasons
# compile with `idbg` to draw images to a separate window
show-image = { version = "0.14.0", features = ["image"] }

clap = { version = "4.5.16", features = ["derive"] }
xcap = "0.0.11"
image = "0.25.2"
imageproc = { version = "0.25.0", features = ["rayon"] }
rayon = "1.10.0"
crossbeam = "0.8.4"
opencv = { version = "0.92.2", features = ["rgb"] }
rgb = "0.8.48"

[features]
idbg = []
